# hey-garmin-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  SYSTEM_PROMPT.md  _test_workout.txt  audit.py  bot.py  chatgpt.py  db.py  docker-compose.yml  garmin.py  garmin_browser_auth.py  garmin_cli.py  garmin_convert.py  garmin_curl_login.py  garmin_oauth.py  make_garmin_token.py  prefs.py  pyproject.toml  rate_limiter.py  redis_conn.py  requirements.txt  session.py  tg_init_data.py  token_crypto.py  user.py  validate_garmin.py  webapp_server.py  workout.py  workout_log.py  workout_models.py  workout_schema.json  workout_service.py
cloudflare-worker/: README.md  garmin-oauth-proxy.js  wrangler.toml
evals/: README.md  cases.py  models.py  run.py
examples/intervals/: july-22.json
examples/prompts/: hey-track-07-22.txt  hey-track-09-30.txt
scripts/: backfill_token_encryption.py
tests/: conftest.py  test_concurrency.py  test_garmin_auth.py  test_garmin_convert.py  test_plan_to_json_live.py  test_prefs.py  test_rate_limiter.py  test_session.py  test_tg_init_data.py  test_token_crypto.py  test_token_refresh_persistence.py  test_webapp_server.py  test_workout_ai_config.py
webapp/: app.js  index.html
workout_ai/: __init__.py  __main__.py  config.py  errors.py  gate.py  models.py  planner.py
workout_ai/providers/: __init__.py  claude.py  openai.py
