[project]
name = "hey-garmin-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "cachetools==6.1.0",
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "garth==0.5.17",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "jsonschema>=4.25.1",
    "motor==3.7.1",
    "oauthlib==3.3.1",
    "openai==1.95.1",
    "pyaes==1.6.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pymongo==4.13.2",
    "pyrogram==2.0.106",
    "pysocks==1.7.1",
    "pytest>=8.4.2",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
]
