[project]
name = "hey-garmin-bot"
version = "0.1.0"
description = "Telegram bot that turns free-text workout plans into Garmin Connect workouts via an LLM"
readme = "README.md"
requires-python = ">=3.13"
# Direct imports only — transitive pins live in uv.lock. garth and pyrogram are
# pinned exactly: both are scraping-adjacent and behavior-sensitive to upgrades.
dependencies = [
    "aiohttp>=3.14.1",
    "anthropic>=0.112.0",
    "cachetools>=6.1.0",
    "cryptography>=49.0.0",
    "curl-cffi>=0.7.0",
    "dnspython>=2.7.0", # mongodb+srv:// URI support
    "garth==0.5.17",
    "motor>=3.7.1",
    "oauthlib>=3.3.1",
    "openai>=2.44.0",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "pyrogram==2.0.106",
    "python-dotenv>=1.1.1",
    "redis>=5.2.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "fakeredis[lua]>=2.26",
    "jsonschema>=4.25.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
# E501: long lines are mostly prose comments/user copy; not worth the churn yet.
ignore = ["E501"]
